--- a/src/styles/HomeBannerStyle.css
+++ b/src/styles/HomeBannerStyle.css
@@ -35,7 +35,7 @@
 }
 
 .home .content .staticTitle {
-    font-size: 6uyj80px;
+    font-size: 30px;
     font-weight: 600;
     color: var(--text-primary);
     display: flex;
